# physicalAI-book-hackathon

./: .feature_creation_output.json  .gitignore  docusaurus.config.js
.specify/memory/: constitution.md
backend/: agent.py  api.py  check_progress.py  check_sitemap.py  debug_env.py  debug_search.py  extract_urls.py  extracted_urls.txt  ingest_batch.py  ingest_from_sitemap.py  ingest_full_sitemap.py  ingest_main_site.py  main.py  pyproject.toml  requirements.txt  retrieval.py  retrieve.py  test_qdrant_storage.py  test_retrieval.py  validation.py  verify_ingestion.py
backend/src/: config.py  logging_config.py
backend/src/agents/tools/: base_tool.py
backend/src/embedding/: client.py  generator.py  models.py
backend/src/ingestion/: chunker.py  models.py  processor.py  text_cleaner.py  url_fetcher.py
backend/src/storage/: models.py  qdrant_client.py
backend/tests/: test_chunking.py  test_embedding.py  test_ingestion.py  test_storage.py
docs/module-04/: autonomous-capstone.md  cognitive-planning.md
physicalAI-book/: .gitignore  docusaurus.config.js  package-lock.json  sidebars.js
physicalAI-book/docs/: introduction.mdx
specs/001-ai-agent-rag/: data-model.md  plan-summary.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-docusaurus-ui-upgrade/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-intro-physical-ai/: intro.spec.yaml  spec.md
specs/001-qdrant-retrieval/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-rag-docusaurus-embedding/: data-model.md  plan.md  spec.md  (+3 more)
(+99 files in other folders)
